<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
    >


        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/question_text"
            android:textSize="@dimen/titleSize"/>

        <EditText
            android:id="@+id/inputQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:textAlignment="center"
            android:text="@string/question_display"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/answer_text"
            android:textSize="@dimen/titleSize"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/answerListview"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:choiceMode="singleChoice"
                    android:listSelector="#8BC34A" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/continuePlaceButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginTop="35dp"
            android:onClick="onConfirmClick"
            android:text="@string/confirm_button"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:background="@drawable/press_btn"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/beige" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>