<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameCameraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/titleText"
            android:textSize="@dimen/titleSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/game_text"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="67dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_marginTop="30dp"
            android:layout_width="367dp"
            android:layout_height="379dp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="115dp"
            tools:srcCompat="@drawable/join_camera" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_description"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="562dp" />

        <Button
            android:id="@+id/confirmButton"
            android:text="@string/try_again"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginTop="30dp"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:background="@drawable/press_btn"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/beige" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>