<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessCreationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/success_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textAlignment="center"
            android:textSize="26dp"
            android:textColor="#000000"
            android:text="@string/success_title" />

        <TextView
            android:id="@+id/success_gameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="#000000"
            android:layout_marginVertical="40dp"
            android:text="tmp" />

        <TextView
            android:id="@+id/success_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="@string/success_description" />

        <Button
            android:id="@+id/confirmRecapButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:onClick="onConfirmClick"
            android:text="@string/confirm_button"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:background="@drawable/press_btn"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/beige"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>