<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".GameHangmanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangman"
            android:layout_marginTop="50dp"
            android:textSize="@dimen/titleSize"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            tools:layout_editor_absoluteY="79dp" />

        <LinearLayout
            android:id="@+id/solutionLine"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >
            <TextView
                android:id="@+id/solutionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/titleSize"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                tools:layout_editor_absoluteY="150dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/inputQuestion"
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginRight="25dp"
                android:ems="10"
                android:inputType="none"
                android:textAlignment="center"
                android:layout_weight="1"
                tools:ignore="LabelFor"
                android:maxLength="1"
                android:digits="abcdefghijklmnopqrstuvwxyz" />

            <Button
                android:id="@+id/okButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="82dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/press_btn"
                android:onClick="onOkClick"
                android:text="@string/button_ok"
                android:textColor="@color/beige"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            tools:layout_editor_absoluteY="318dp"
            tools:srcCompat="@drawable/hangma_5" />

        <Button
            android:id="@+id/hintButton"
            android:text="@string/hint"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="643dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginTop="5dp"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:background="@drawable/press_btn"
            android:onClick="onHintClick"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/beige"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>